--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="col">
           <ul>
             <li>
-              <!--añadir aqui entrada-->
+              <a href="mapstyle.html" target="_blank">Estil mapbox 1.</a>
             </li>
             <li>
               <!--añadir aqui entrada-->
