mapa amb  controls

--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
         <div class="col">
           <ul>
             <li>
-              <a href="mapstyle.html" target="_blank">Estil mapbox 1.</a>
+              <a href="mapstyle.html" target="_blank">Estil mapa 1.</a>
             </li>
             <li>
-              <!--añadir aqui entrada-->
+              <a href="mapbox-basico.html" target="_blank">Mapa 1 mapbox.</a>
             </li>
           </ul>
         </div>
