--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
             <li>
               <a href="mapbox-basico.html" target="_blank">Mapa 1 mapbox.</a>
             </li>
+            <li>
+              <a href="edificios.html" target="_blank">Catastro Barcelona.</a>
+            </li>
           </ul>
         </div>
       </div>
