--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
               <a href="mapbox-basico.html" target="_blank">Mapa 1 mapbox.</a>
             </li>
             <li>
+              <a href="mapbox-global.html" target="_blank">Mapa global.</a>
+            </li>
+            <li>
               <a href="edificios.html" target="_blank">Catastro Barcelona.</a>
             </li>
           </ul>
