--- a/index.html
+++ b/index.html
@@ -1,58 +1,44 @@
-<html  lang="es">
+<html lang="es">
 <head>
+
   <title>Mis mapas M2B</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="autor" />
   <meta name="description" content="descripción página">
   <meta name="robots" content="index,follow">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/lux/bootstrap.min.css" integrity="sha384-9+PGKSqjRdkeAU7Eu4nkJU8RFaH8ace8HGXnkiKMP9I9Te0GJ4/km3L1Z8tXigpG" crossorigin="anonymous">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap" rel="stylesheet">
+
   <style>
-    .seccion {
-      border-radius: 0px !important;
-    }
-    .container {
-      margin-top: 5px;
-    }
-    .storytelling {
-      background-color: #e7e7f1;
-    }
-    .kepler {
-      background-color: #f1e7ea;
-    }
-    .practicas {
-      background-color: #e7f0f1;
-    }
-    .MapboxGLJS {
-      background-color: #e7f1e8;
-    }
-    small {
-      font-size: 60% !important;
-    }
-    .navbar {
-      background-color: #f1e9e7 !important;
-      border-radius: 0px !important;
-    }
-    .row {
-      margin-top: 10px;
-    }
-    body {
-      font-family: 'Inconsolata', sans-serif !important;
-      font-size: 16px !important;
-    }
-    @media screen and (max-width: 500px) {
-      body {
-        font-size: 80% !important;
-      }
-    }
+
+    body { font-family: 'Comfortaa', cursive, sans-serif ; font-size: 16px ; }
+    @media screen and (max-width: 500px) { body { font-size: 80% !important; } } 
+    h4 { color: rgb(255, 255, 255); }
+    li { font-size: 27px; }  
+    small { font-size: 60% !important; }
+
+    .seccion { border-radius: 0px !important; }
+    .container { margin-top: 5px; }
+    .navbar { background-color: rgba(0,0,0,0.6) !important; margin-top: 20px; }
+    .row { margin-top: 10px; }
+
+    .MapboxGLJS { background-color: rgb(255, 0, 0, 0.4); }
+    .storytelling { background-color: rgb(255, 165, 0, 0.4); }
+    .kepler { background-color: rgb(255, 255, 0, 0.4); }     
+    .practicas { background-color: rgb(0, 128, 0, 0.4); }
+    .practica { background-color: rgb(0, 0, 255, 0.4); }        
+  
   </style>
+
 </head>
 <body>
+
   <div class="container">
-    <nav class="navbar navbar-light bg-light">
+    <nav class="navbar">
       <h4>
         Mis mapas módulo M2B
         <br>
@@ -62,88 +48,81 @@
       </h4>
     </nav>
     <br>
+ 
     <div class="alert seccion MapboxGLJS">
-      <h5>Mapas MapboxGLJS</h5>
+      <h4>MapboxGLJS</h4>
       <div class="row">
         <div class="col">
           <ul>
             <li>
-              <a href="mapstyle.html" target="_blank">Estil mapa 1.</a>
+              <a href="miestilo.html" target="_blank"> Mi estilo </a>
             </li>
-            <li>
-              <a href="mapbox-basico.html" target="_blank">Mapa 1 mapbox.</a>
-            </li>
-            <li>
-              <a href="mapbox-global.html" target="_blank">Mapa global.</a>
-            </li>
-            <li>
-              <a href="edificios.html" target="_blank">Catastro Barcelona.</a>
-            </li>
-            <li>
-              <a href="mapa3d.html" target="_blank">Mapa 3D.</a>
-            </li>
+            <li></li>
+            <li></li>
           </ul>
         </div>
       </div>
     </div>
-    <div class="alert seccion storytelling">
-      <h5>Mapas StoryTelling</h5>
-      <div class="row">
-        <div class="col">
-          <ul>
-           <li>
-              <!--añadir aqui entrada-->
-            </li>
-            <li>
-              <!--añadir aqui entrada-->
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="alert seccion kepler">
-      <h5>Kepler.Gl</h5>
-      <div class="row">
-        <div class="col">
-          <ul>
-            <li>
-              <!--añadir aqui entrada-->
-            </li>
-            <li>
-              <!--añadir aqui entrada-->
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="alert seccion practicas">
-      <h5>Prácticas clase</h5>
-      <div class="row">
-        <div class="col">
-          <ul>
-            <li>
-              <!--añadir aqui entrada-->
-            </li>
-            <li>
-              <!--añadir aqui entrada-->
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="alert seccion practicas">
-      <h5>Práctica final</h5>
-      <div class="row">
-        <div class="col">
-          <ul>
-            <li>
-              <!--añadir aqui entrada-->
-            </li>
 
+    <div class="alert seccion storytelling">
+      <h4>StoryTelling</h4>
+      <div class="row">
+        <div class="col">
+          <ul>
+            <li>
+              <a href="miestilo.html" target="_blank"> Mi estilo </a>
+            </li>
+            <li></li>
+            <li></li>
           </ul>
         </div>
+      </div>
+    </div>
+  
+    <div class="alert seccion kepler">
+      <h4>KeplerGL</h4>
+      <div class="row">
+        <div class="col">
+          <ul>
+            <li>
+              <a href="miestilo.html" target="_blank"> Mi estilo </a>
+            </li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  
+    <div class="alert seccion practicas">
+      <h4>Prácticas classe</h4>
+      <div class="row">
+        <div class="col">
+          <ul>
+            <li>
+              <a href="miestilo.html" target="_blank"> Mi estilo </a>
+            </li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    
+    <div class="alert seccion practicas">
+    <h4>Práctica final</h4>
+    <div class="row">
+      <div class="col">
+        <ul>
+          <li>
+            <a href="miestilo.html" target="_blank"> Mi estilo </a>
+          </li>
+          <li></li>
+          <li></li>
+        </ul>
       </div>
     </div>
   </div>
+
 </body>
 </html>
