--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 
     body { font-family: 'Comfortaa', cursive, sans-serif ; font-size: 16px ; }
     @media screen and (max-width: 500px) { body { font-size: 80% !important; } } 
-    h4 { color: rgb(255, 255, 255); }
-    li { font-size: 27px; }  
+    h4 { color: rgb(255, 255, 255); text-shadow: 2px 2px 4px #000000; font-weight: bold; }
     small { font-size: 60% !important; }
 
     .seccion { border-radius: 0px !important; }
@@ -70,8 +69,7 @@
         <div class="col">
           <ul>
             <li>
-              <a href="miestilo.html" target="_blank"> Mi estilo </a>
-            </li>
+              </li>
             <li></li>
             <li></li>
           </ul>
@@ -85,7 +83,6 @@
         <div class="col">
           <ul>
             <li>
-              <a href="miestilo.html" target="_blank"> Mi estilo </a>
             </li>
             <li></li>
             <li></li>
@@ -100,7 +97,7 @@
         <div class="col">
           <ul>
             <li>
-              <a href="miestilo.html" target="_blank"> Mi estilo </a>
+              <a href="https://api.mapbox.com/styles/v1/mapator/clfco16sz008i01pjx01j4vbc.html?title=view&access_token=pk.eyJ1IjoibWFwYXRvciIsImEiOiJja3dxaXdvZm8wbXI5Mm9xb2JraDJmMjY3In0.cluUTNNRHJwurzUx6dMZDQ&zoomwheel=true&fresh=true#11.92/41.3826/2.17907" target="_blank"> CozyStyle </a>
             </li>
             <li></li>
             <li></li>
@@ -115,7 +112,6 @@
       <div class="col">
         <ul>
           <li>
-            <a href="miestilo.html" target="_blank"> Mi estilo </a>
           </li>
           <li></li>
           <li></li>
