--- a/index.html
+++ b/index.html
@@ -54,9 +54,14 @@
         <div class="col">
           <ul>
             <li>
-              <a href="miestilo.html" target="_blank"> Mi estilo </a>
+              <a href="mapstyle.html" target="_blank"> Embedded first style </a>
             </li>
-            <li></li>
+            <li>
+              <a href="mapbox-basico.html" target="_blank"> Pruebas mapbox </a>
+            </li>
+            <li>
+              <a href="edificios.html" target="_blank"> Catastro </a>
+            </li>
             <li></li>
           </ul>
         </div>
