--- a/mapbox-global.html
+++ b/mapbox-global.html
@@ -1,5 +1,5 @@
 <html lang="es">
-  <head>
+<head>
   <title>Mapbox global</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,51 +8,50 @@
     <meta name="robots" content="index,follow">
     <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.css" />
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.js"></script>
-
+    <!-- Calen per afegir geocoder -->
     <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.min.js"></script>
     <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.css" type="text/css">
   <style>
-  body {
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-  }
-  #map {
-    height: 100%;
-    width: 100%;
-  }
+    body {
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+    }
+    #map {
+      height: 100%;
+      width: 100%;
+    }
   </style>
   <script>
-var map;  // tambien const map;
-  function init() {
-            mapboxgl.accessToken =
-                'pk.eyJ1IjoiZ2lzbWFzdGVybTIiLCJhIjoiY2plZHhubTQxMTNoYzMza3Rqa3kxYTdrOCJ9.53B1E6mKD_EQOVb2Y0-SsA';
-            map = new mapboxgl.Map({
-                container: 'map',
-                style: 'mapbox://styles/mapbox/satellite-streets-v11',
-                center: [0, 0],
-                zoom: 2.3,
-                projection:'globe',
-                attributionControl: false
-            });
-        map.addControl(new mapboxgl.AttributionControl({compact: true}));
-        map.addControl(new mapboxgl.NavigationControl());
-        map.on('load', () => {
-            map.setFog({}); 
-        });
+    var map;  // tambien const map;
+    function init() {
+      mapboxgl.accessToken =
+        'pk.eyJ1IjoibWFwYXRvciIsImEiOiJja3dxaXdvZm8wbXI5Mm9xb2JraDJmMjY3In0.cluUTNNRHJwurzUx6dMZDQ';
+      map = new mapboxgl.Map({
+        container: 'map',
+        style: 'mapbox://styles/mapbox/satellite-streets-v11',
+        center: [0, 0],
+        zoom: 2.3,
+        projection:'globe',
+        attributionControl: false
+      });
+      map.addControl(new mapboxgl.AttributionControl({compact: true}));
+      map.addControl(new mapboxgl.NavigationControl());
+      map.on('load', () => {
+        map.setFog({}); 
+      });
 
-
-                map.addControl(
-                    new MapboxGeocoder({
-                    accessToken: mapboxgl.accessToken,
-                    mapboxgl: mapboxgl
-                    })
-                 );
-
-        }
+      //Cridem els plugins per a això:
+      map.addControl(
+        new MapboxGeocoder({
+        accessToken: mapboxgl.accessToken,
+        mapboxgl: mapboxgl
+        })
+      );
+    }
   </script>
-  </head>
-  <body onLoad="init()">
+</head>
+<body onLoad="init()">
   <div id="map"></div>
-  </body>
-  </html>
+</body>
+</html>
