--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
       <div class="col">
         <ul>
           <li>
+            <a href="valencia.html" target="_blank">Visor edificios catastrales de Valencia capital.</a>
           </li>
-          <li></li>
           <li></li>
         </ul>
       </div>
