--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       <div class="col">
         <ul>
           <li>
-            <a href="valencia.html" target="_blank">Visor edificios catastrales de Valencia capital.</a>
+            <a href="valencia.html" target="_blank">Visor edificios catastrales de Valencia capital</a>
           </li>
           <li></li>
         </ul>
