--- a/valencia.html
+++ b/valencia.html
@@ -12,7 +12,7 @@
     
         <!--Reaprovechamos estilo de la práctica 3, edificios-->
         <link href='css/estilobase.css' rel='stylesheet' />
-        <!--<script src='js/valencia.js'></script>-->
+        <script src='js/valencia.js'></script>
 
         <script>
             var map;
@@ -29,21 +29,31 @@
                     hash: true
                 });
 
-                map.addControl(new mapboxgl.AttributionControl({ compact: true }));
-                map.addControl(new mapboxgl.NavigationControl());
+                map.addControl(new mapboxgl.AttributionControl({ compact: true })); //atribució down-right col·lapsada
+                map.addControl(new mapboxgl.NavigationControl()); //Zooms i nord
 
                 map.addControl(
                     new MapboxGeocoder({
                     accessToken: mapboxgl.accessToken,
                     mapboxgl: mapboxgl,
+                    collapsed: true,
                     bbox:[ -0.8040464595956109 , 39.22401204479797 , 0.010398749996284096 , 39.70734534726117]
                     }));
+
+                map.on('load', function () {
+                    addEdificiosCapa();
+                    addPopupToMapEdificios("edificios");
+                });
 
             } // final init
         </script>
     </head>
 
     <body onload="init()">
+        <div class="panelTopIzquierda">
+            <label id="altura">Més de 0 pisos</label>
+            <input  onChange="filtrarEdificios(this.value)" id="slider" type="range" min="1" max="40" step="1" value="0" />
+        </div>
         <div id="map"></div>
     </body>
 
