--- a/valencia.html
+++ b/valencia.html
@@ -2,7 +2,7 @@
 
     <head>
         <meta charset='utf-8' />
-        <title>Edificios Valencia</title>
+        <title>Valencia buildings</title>
         <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
         <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.css" />
         <script src="https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.js"></script>
@@ -51,7 +51,7 @@
 
     <body onload="init()">
         <div class="panelTopIzquierda">
-            <label id="altura">Més de 0 pisos</label>
+            <label id="altura">More than 0 floors</label>
             <input  onChange="filtrarEdificios(this.value)" id="slider" type="range" min="1" max="40" step="1" value="0" />
         </div>
         <div id="map"></div>
