--- a/index.html
+++ b/index.html
@@ -62,7 +62,33 @@
             <li>
               <a href="edificios.html" target="_blank"> Catastro </a>
             </li>
-            <li></li>
+            <li>
+              <a href="mapa3d.html" target="_blank"> Mapa 3D </a>
+                        </li>
+                        <li>
+                            <a href="mapa-rutas3d.html" target="_blank"> Mapa rutas 3D </a>
+                        </li>
+                        <li>
+                            <a href="mapbox-icgc.html" target="_blank"> Mapa ICGC </a>
+                        </li>
+
+                        <li>
+                            <a href="terremotos.html" target="_blank"> Terremotos </a>
+                        </li>
+
+                        <li>
+                            <a href="farmacias.html" target="_blank"> Farmacias </a>
+                        </li>
+                        <li>
+                            <a href="pwa.html" target="_blank"> PWA</a>
+                        </li>
+                        <li>
+                            <a href="poblacion.html" target="_blank"> Población</a>
+                        </li>
+
+                        <li>
+                            <a href="metamapa.html" target="_blank"> Metamapa</a>
+                        </li>                        
           </ul>
         </div>
       </div>
@@ -73,10 +99,7 @@
       <div class="row">
         <div class="col">
           <ul>
-            <li>
-              </li>
-            <li></li>
-            <li></li>
+            <li><a href="storytelling.html" target="_blank"> Volcanes </a></li>
           </ul>
         </div>
       </div>
@@ -88,9 +111,8 @@
         <div class="col">
           <ul>
             <li>
+              <a href="accidentes.html" target="_blank"> Accidentes </a>
             </li>
-            <li></li>
-            <li></li>
           </ul>
         </div>
       </div>
