--- a/index.html
+++ b/index.html
@@ -126,7 +126,10 @@
             <li>
               <a href="https://api.mapbox.com/styles/v1/mapator/clfco16sz008i01pjx01j4vbc.html?title=view&access_token=pk.eyJ1IjoibWFwYXRvciIsImEiOiJja3dxaXdvZm8wbXI5Mm9xb2JraDJmMjY3In0.cluUTNNRHJwurzUx6dMZDQ&zoomwheel=true&fresh=true#11.92/41.3826/2.17907" target="_blank"> CozyStyle </a>
             </li>
-            <li></li>
+          
+                        <li>
+                            <a href="hospitales.html" target="_blank"> Hospitales Tailandia </a>
+                        </li>
             <li></li>
           </ul>
         </div>
