--- a/index.html
+++ b/index.html
@@ -119,7 +119,9 @@
           <li>
             <a href="valencia.html" target="_blank">Visor edificios catastrales de Valencia capital</a>
           </li>
-          <li></li>
+          <li>
+            <a href="https://medium.com/@pa6eal/an-interactive-map-of-valencia-9d5b96b461ea">An interactive map of Valencia (Medium article)</a>
+          </li>
         </ul>
       </div>
     </div>
