--- a/index.html
+++ b/index.html
@@ -130,7 +130,6 @@
                         <li>
                             <a href="hospitales.html" target="_blank"> Hospitales Tailandia </a>
                         </li>
-            <li></li>
           </ul>
         </div>
       </div>
@@ -144,7 +143,9 @@
           <li>
             <a href="valencia.html" target="_blank">Visor edificios catastrales de Valencia capital</a>
           </li>
-          <li></li>
+          <li>
+            <a href="https://medium.com/@pa6eal/an-interactive-map-of-valencia-9d5b96b461ea" target="_blank">Artículo de Medium.</a>  
+          </li>
         </ul>
       </div>
     </div>
