--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="es">
 <head>
 
-  <title>Mis mapas M2B</title>
+  <title>(Alguns) Treballs del màster en sistemes d'informació geogràfica</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="autor" />
