--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="es">
 <head>
 
-  <title>(Alguns) Treballs del màster en sistemes d'informació geogràfica</title>
+  <title>geoweb</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="autor" />
@@ -39,10 +39,10 @@
   <div class="container">
     <nav class="navbar">
       <h4>
-        Mis mapas módulo M2B
+        (Alguns) Treballs del màster en sistemes d'informació geogràfica
         <br>
         <small>
-          Mapas y OpenData, Localización, Visualización y Análisis de GeoDatos
+          Mapas i OpenData, Localització, Visualizació i Anàlisi de dades geogràfiques
         </small>
       </h4>
     </nav>
@@ -57,33 +57,33 @@
               <a href="mapstyle.html" target="_blank"> Embedded first style </a>
             </li>
             <li>
-              <a href="mapbox-basico.html" target="_blank"> Pruebas mapbox </a>
+              <a href="mapbox-basico.html" target="_blank"> Proves mapbox </a>
             </li>
             <li>
-              <a href="edificios.html" target="_blank"> Catastro </a>
+              <a href="edificios.html" target="_blank"> Cadastre </a>
             </li>
             <li>
               <a href="mapa3d.html" target="_blank"> Mapa 3D </a>
                         </li>
                         <li>
-                            <a href="mapa-rutas3d.html" target="_blank"> Mapa rutas 3D </a>
+                            <a href="mapa-rutas3d.html" target="_blank"> Mapa rutes 3D </a>
                         </li>
                         <li>
                             <a href="mapbox-icgc.html" target="_blank"> Mapa ICGC </a>
                         </li>
 
                         <li>
-                            <a href="terremotos.html" target="_blank"> Terremotos </a>
+                            <a href="terremotos.html" target="_blank"> Terratrèmols </a>
                         </li>
 
                         <li>
-                            <a href="farmacias.html" target="_blank"> Farmacias </a>
+                            <a href="farmacias.html" target="_blank"> Farmàcies </a>
                         </li>
                         <li>
                             <a href="pwa.html" target="_blank"> PWA</a>
                         </li>
                         <li>
-                            <a href="poblacion.html" target="_blank"> Población</a>
+                            <a href="poblacion.html" target="_blank"> Població</a>
                         </li>
 
                         <li>
@@ -99,7 +99,7 @@
       <div class="row">
         <div class="col">
           <ul>
-            <li><a href="storytelling.html" target="_blank"> Volcanes </a></li>
+            <li><a href="storytelling.html" target="_blank"> Volcans </a></li>
           </ul>
         </div>
       </div>
@@ -111,7 +111,7 @@
         <div class="col">
           <ul>
             <li>
-              <a href="accidentes.html" target="_blank"> Accidentes </a>
+              <a href="accidentes.html" target="_blank"> Accidents </a>
             </li>
           </ul>
         </div>
@@ -124,10 +124,10 @@
       <div class="col">
         <ul>
           <li>
-            <a href="valencia.html" target="_blank">Visor edificios catastrales de Valencia capital</a>
+            <a href="valencia.html" target="_blank">Visor edificis cadastrals de València capital</a>
           </li>
           <li>
-            <a href="https://medium.com/@pa6eal/an-interactive-map-of-valencia-9d5b96b461ea" target="_blank">Artículo de Medium.</a>  
+            <a href="https://medium.com/@pa6eal/an-interactive-map-of-valencia-9d5b96b461ea" target="_blank">Artícle de Medium.</a>  
           </li>
         </ul>
       </div>
