--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         (Alguns) Treballs del màster en sistemes d'informació geogràfica
         <br>
         <small>
-          Mapas i OpenData, Localització, Visualizació i Anàlisi de dades geogràfiques
+          Mapes i OpenData, Localització, Visualizació i Anàlisi de dades geogràfiques
         </small>
       </h4>
     </nav>
@@ -119,7 +119,7 @@
     </div>
     
     <div class="alert seccion practicas">
-    <h4>Práctica final</h4>
+    <h4>Práctica M2B</h4>
     <div class="row">
       <div class="col">
         <ul>
