--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     </div>
     
     <div class="alert seccion practicas">
-    <h4>Práctica M2B</h4>
+    <h4>Pràctica M2B</h4>
     <div class="row">
       <div class="col">
         <ul>
