--- a/index.html
+++ b/index.html
@@ -127,7 +127,17 @@
             <a href="valencia.html" target="_blank">Visor edificis cadastrals de València capital</a>
           </li>
           <li>
-            <a href="https://medium.com/@pa6eal/an-interactive-map-of-valencia-9d5b96b461ea" target="_blank">Artícle de Medium.</a>  
+            <a href="https://medium.com/@pa6eal/an-interactive-map-of-valencia-9d5b96b461ea" target="_blank">Article de Medium.</a>  
+          </li>
+        </ul>
+      </div>
+    </div>
+    <h4>Pràctica M2A</h4>
+    <div class="row">
+      <div class="col">
+        <ul>
+          <li>
+            <a href="a.html" target="_blank">Pràctica bars de Barna</a>
           </li>
         </ul>
       </div>
