--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <br>
         <small>
           Mapes i OpenData, Localització, Visualizació i Anàlisi de dades geogràfiques
-          <em>A Firefox pot donar errors!</em>
+          <br><br><em>A Firefox pot donar errors!</em>
         </small>
       </h4>
     </nav>
