--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     .kepler { background-color: rgb(255, 255, 0, 0.4); }     
     .practicas { background-color: rgb(0, 128, 0, 0.4); }
     .practica { background-color: rgb(0, 0, 255, 0.4); }        
+    .tesina { background-color: rgba(109, 109, 148, 0.298); }      
   
   </style>
 
@@ -128,7 +129,7 @@
             <a href="valencia.html" target="_blank">Visor edificis cadastrals de València capital</a>
           </li>
           <li>
-            <a href="https://medium.com/@pa6eal/an-interactive-map-of-valencia-9d5b96b461ea" target="_blank">Article de Medium.</a>  
+            <a href="https://medium.com/@pa6eal/an-interactive-map-of-valencia-9d5b96b461ea" target="_blank">Article de Medium</a>  
           </li>
         </ul>
       </div>
@@ -144,6 +145,21 @@
       </div>
     </div>
   </div>
+
+  <div class="alert seccion tesina">
+    <h4>Visor del projecte final del màster</h4>
+    <div class="row">
+      <div class="col">
+        <ul>
+          <li>
+            <a href="https://riura31.users.earthengine.app/view/visorindexsrmb" target="_blank">Visor en línia d'índexs a partir d'imatges satel·litàries de Sentinel-2</a>
+          </li>
+          <li>
+            <a href="" target="_blank">(Futur) enllaç al resum de la tesina</a>  
+          </li>
+        </ul>
+      </div>
+    </div>
 
 </body>
 </html>
