--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
   </div>
 
   <div class="alert seccion quarentena">
-    <h4>QZ</h4>
+    <h4>BSC trials</h4>
     <div class="row">
       <div class="col">
         <ul>
@@ -210,7 +210,7 @@
                 <a href="Proves/e.html" target="_blank">e.</a> Afegir estil a partir de <a href="https://docs.mapbox.com/help/tutorials/add-3d-buildings-studio/#option-2-style-an-individual-layer" target="_blank">tileset</a> amb propietats nostres, i cridar-lo
               </li>
               <li>
-                <a href="Proves/f.html" target="_blank">f.</a> Afegir des d'HTML a partir de <a href="https://docs.mapbox.com/help/tutorials/add-3d-buildings-studio/#option-2-style-an-individual-layer" target="_blank">custom tileset</a>
+                <a href="Proves/f.html" target="_blank">f.</a> Afegir des d'HTML a partir de custom tileset</a>
               </li>
             </ul>
           </li>
